# vfuzz

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  libvfuzz-core-example.cpp  nlohmann.cpp
include/vfuzz/: datasource.h  types.h  vfuzz.h
libvfuzz-core/: CMakeLists.txt
libvfuzz-core/src/base/: exception.h  types.h
libvfuzz-core/src/container/: input.cpp  input.h  inputcluster.cpp  inputcluster.h
libvfuzz-core/src/container/base/: serializable.h
libvfuzz-core/src/container/corpus/: corpus.cpp  corpus.h
libvfuzz-core/src/datasource/: datasource.cpp  datasource.h  id.cpp
libvfuzz-core/src/dictionary/: autodict.cpp  autodict.h  base.cpp  base.h  dictionary.cpp  dictionary.h
libvfuzz-core/src/generator/: container.cpp  container.h  generator.cpp  generator.h
libvfuzz-core/src/logger/: consolelogger.cpp  consolelogger.h  filelogger.cpp  filelogger.h  jsonlogger.cpp  jsonlogger.h  logger.cpp  logger.h  loggerchain.cpp  loggerchain.h  nooplogger.cpp  nooplogger.h  textlogger.cpp  textlogger.h
libvfuzz-core/src/mutator/: base.cpp  base.h  container.cpp  container.h  copy.cpp  copy.h  copypart.cpp  copypart.h  crossover.cpp  crossover.h  erasebytes.cpp  erasebytes.h  history.cpp  history.h  insertbyte.cpp  insertbyte.h  insertdictionary.cpp  insertdictionary.h  insertrepeatedbytes.cpp  insertrepeatedbytes.h  mutator.h  random.cpp  random.h  range_based.cpp  range_based.h  ranged.h  shufflebytes.cpp  shufflebytes.h  util.cpp  util.h
libvfuzz-core/src/sensor/: container.cpp  container.h
libvfuzz-core/src/sensor/data/: base.cpp  base.h  data.cpp  data.h
libvfuzz-core/src/sensor/processor/: base.cpp  base.h  highest.cpp  highest.h  lowest.cpp  lowest.h  noop.cpp  noop.h  sensor.cpp  sensor.h  unique.cpp  unique.h  uniquemax.cpp  uniquemax.h
libvfuzz-core/src/sensor/sensor/: allocation.cpp  allocation.h  allocationglobalmax.cpp  allocationglobalmax.h  base.cpp  base.h  cmp.cpp  cmp.h  codecoverage.cpp  codecoverage.h  codeintensity.cpp  codeintensity.h  custom.cpp  custom.h  flowtrace.cpp  flowtrace.h  pc.cpp  pc.h  stack.cpp  stack.h  valuebitmap.h  valueprofile.cpp  valueprofile.h
libvfuzz-core/src/sensor/sensor/auto/: README.md  allocationsinglemax.cpp  allocationsinglemax.h  autocodeintensity.cpp  autocodeintensity.h  autosensor.cpp  autosensor.h  cmpdiff.cpp  cmpdiff.h
libvfuzz-core/src/util/: allocationtracker.cpp  allocationtracker.h  conduit.h  io.cpp  io.h  pushpullcallback.h  random.h  sha1.cpp  sha1.h  util.cpp  util.h
libvfuzz-core/src/util/string/: string.cpp  string.h
libvfuzz-core/tests/fuzzers/: dictionary.cpp  mutator.cpp  processor.cpp  processor_derivation.cpp
libvfuzz-runtime/: CMakeLists.txt
libvfuzz-runtime/src/: main.cpp
libvfuzz-runtime/src/container/corpus/: manager.cpp  manager.h
libvfuzz-runtime/src/datasource/: datasource.cpp  datasource.h
libvfuzz-runtime/src/exec/: execmanager.cpp  execmanager.h  executor.cpp  executor.h
libvfuzz-runtime/src/interface/: README.md  callbacks.cpp  extfunctions.cpp  extfunctions.def  extfunctions.h  malloc_hooks.cpp  malloc_hooks.h
libvfuzz-runtime/src/options/: addrules.cpp  addrules.h  addrules.md  options.cpp  options.h
libvfuzz-runtime/src/sensor/: driver.cpp  driver.h
libvfuzz-runtime/src/util/: mallocfreetracer.h
