cmake_minimum_required (VERSION 2.6)
project (vfuzz-core)

set(ExternalIncludeDirectories
    ../include
    ../third_party/fuzzing-headers/include/)
set(InternalIncludeDirectories
    src/
    ../third_party/cxxopts/include/
    ${ExternalIncludeDirectories})

set(LibvfuzzCoreSources
    src/base/exception.h
    src/base/types.h
    src/container/base/serializable.h
    src/container/corpus/corpus.cpp
    src/container/corpus/corpus.h
    src/container/input.cpp
    src/container/input.h
    src/container/inputcluster.cpp
    src/container/inputcluster.h
    src/datasource/datasource.cpp
    src/datasource/datasource.h
    src/datasource/id.cpp
    src/datasource/id.h
    src/dictionary/autodict.cpp
    src/dictionary/autodict.h
    src/dictionary/base.cpp
    src/dictionary/base.h
    src/dictionary/dictionary.cpp
    src/dictionary/dictionary.h
    src/generator/container.cpp
    src/generator/container.h
    src/generator/generator.cpp
    src/generator/generator.h
    src/logger/consolelogger.cpp
    src/logger/consolelogger.h
    src/logger/filelogger.cpp
    src/logger/filelogger.h
    src/logger/jsonlogger.cpp
    src/logger/jsonlogger.h
    src/logger/logger.cpp
    src/logger/logger.h
    src/logger/loggerchain.cpp
    src/logger/loggerchain.h
    src/logger/nooplogger.cpp
    src/logger/nooplogger.h
    src/logger/textlogger.cpp
    src/logger/textlogger.h
    src/mutator/base.cpp
    src/mutator/base.h
    src/mutator/container.cpp
    src/mutator/container.h
    src/mutator/copy.cpp
    src/mutator/copy.h
    src/mutator/copypart.cpp
    src/mutator/copypart.h
    src/mutator/crossover.cpp
    src/mutator/crossover.h
    src/mutator/erasebytes.cpp
    src/mutator/erasebytes.h
    src/mutator/history.cpp
    src/mutator/history.h
    src/mutator/insertbyte.cpp
    src/mutator/insertbyte.h
    src/mutator/insertdictionary.cpp
    src/mutator/insertdictionary.h
    src/mutator/insertrepeatedbytes.cpp
    src/mutator/insertrepeatedbytes.h
    src/mutator/mutator.h
    src/mutator/random.cpp
    src/mutator/random.h
    src/mutator/ranged.h
    src/mutator/range_based.cpp
    src/mutator/range_based.h
    src/mutator/shufflebytes.cpp
    src/mutator/shufflebytes.h
    src/mutator/util.cpp
    src/mutator/util.h
    src/sensor/container.cpp
    src/sensor/container.h
    src/sensor/data/base.cpp
    src/sensor/data/base.h
    src/sensor/data/data.cpp
    src/sensor/data/data.h
    src/sensor/processor/base.cpp
    src/sensor/processor/base.h
    src/sensor/processor/highest.cpp
    src/sensor/processor/highest.h
    src/sensor/processor/lowest.cpp
    src/sensor/processor/lowest.h
    src/sensor/processor/noop.cpp
    src/sensor/processor/noop.h
    src/sensor/processor/sensor.cpp
    src/sensor/processor/sensor.h
    src/sensor/processor/unique.cpp
    src/sensor/processor/unique.h
    src/sensor/processor/uniquemax.cpp
    src/sensor/processor/uniquemax.h
    src/sensor/sensor/allocation.cpp
    src/sensor/sensor/allocation.h
    src/sensor/sensor/allocationglobalmax.cpp
    src/sensor/sensor/allocationglobalmax.h
    src/sensor/sensor/auto/allocationsinglemax.cpp
    src/sensor/sensor/auto/allocationsinglemax.h
    src/sensor/sensor/auto/autocodeintensity.cpp
    src/sensor/sensor/auto/autocodeintensity.h
    src/sensor/sensor/auto/autosensor.cpp
    src/sensor/sensor/auto/autosensor.h
    src/sensor/sensor/auto/cmpdiff.cpp
    src/sensor/sensor/auto/cmpdiff.h
    src/sensor/sensor/base.cpp
    src/sensor/sensor/base.h
    src/sensor/sensor/cmp.cpp
    src/sensor/sensor/cmp.h
    src/sensor/sensor/codecoverage.cpp
    src/sensor/sensor/codecoverage.h
    src/sensor/sensor/codeintensity.cpp
    src/sensor/sensor/codeintensity.h
    src/sensor/sensor/custom.cpp
    src/sensor/sensor/custom.h
    src/sensor/sensor/pc.cpp
    src/sensor/sensor/pc.h
    src/sensor/sensor/stack.cpp
    src/sensor/sensor/stack.h
    src/sensor/sensor/flowtrace.cpp
    src/sensor/sensor/flowtrace.h
    src/sensor/sensor/valuebitmap.h
    src/sensor/sensor/valueprofile.cpp
    src/sensor/sensor/valueprofile.h
    src/util/allocationtracker.cpp
    src/util/allocationtracker.h
    src/util/conduit.h
    src/util/io.cpp
    src/util/io.h
    src/util/pushpullcallback.h
    src/util/random.h
    src/util/sha1.cpp
    src/util/sha1.h
    src/util/string/string.cpp
    src/util/string/string.h
    src/util/util.cpp
    src/util/util.h)

# libvfuzz-core.a
add_library(vfuzz-core STATIC ${LibvfuzzCoreSources})
target_compile_options(vfuzz-core PRIVATE -DFUZZING_HEADERS_NO_IMPL)
target_include_directories(vfuzz-core PRIVATE ${InternalIncludeDirectories})
